# Airflow-3.0-on-Docker-with-playwright

./: .gitignore  Makefile  README.md  README.ru.md  env_sample  pyproject.toml  ruff.toml
.docker/: Dockerfile  docker-compose.yaml
crawlers/base/: const.py
crawlers/playwright/my_crawler/: main.py
dags/: playwright_crawler_dag.py
operators/: custom_operator.py
